# Melody-Harmonization-Tool

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
data/: README.md
data/raw/demo/test/: c_major_arpeggio.mid  c_major_scale.mid  c_minor_scale.mid
data/raw/demo/train/: c_major_pop.mid  chords.json  cm_lament.mid  mary_lamb_c_major.mid  ode_joy_c_major.mid  twinkle_c_major.mid
docs/: ai_use_disclosure.md  progress_log.md  project_summary.md
models/: emissions.json  hmm.json  transitions.json
src/harmonizer/: __init__.py  chord_vocab.py  cli.py  demo_c_major_hmm.py  emissions.py  evaluate.py  harmonize.py  hmm.py  midi_io.py  midi_parser.py  parse_nottingham.py  train.py  train_emissions.py  train_transitions.py  transitions.py
tests/: test_c_major_hmm.py  test_harmonizer.py
