[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "melody-harmonizer"
version = "0.1.0"
description = "HMM-based melody harmonization tool"
requires-python = ">=3.10"
dependencies = [
    "pretty_midi>=0.2.10",
    "numpy>=1.26",
    "scipy>=1.12",
    "mido>=1.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
harmonizer = "harmonizer.cli:main"
